@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-21T08:23:56Z",
+  "timestamp" : "2022-11-22T01:42:50Z",
   "count_outdated" : 2611,
   "uniques_outdated" : 702,
-  "count" : 2643,
+  "count" : 2644,
   "uniques" : 719,
   "clones" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-11-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
