@@ -1,3 +1,11 @@
+2022-11-22T01:42:50Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3519623316 # 1050
+* notice: last 14d: unq all: 9 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 702 2611 / 719 2643
+* notice: next accum: outdated-unq outdated-all / unq all: 702 2611 / 719 2644
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-11-21]
+
 2022-11-21T08:23:56Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3512656172 # 1048
 * notice: last 14d: unq all: 9 32
